<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorAccent"
    android:padding="14dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo_brown"/>

    <EditText
        android:id="@+id/caa02_et_email"
        style="@style/EditText_login"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/caa02_et_email_confirm"/>

    <EditText
        android:id="@+id/caa02_et_email_confirm"
        style="@style/EditText_login"
        android:hint="@string/reenter_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/caa02_send_confirm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_email"
        android:textSize="16dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/caa02_tv_confirmationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_code"
            android:textColor="@color/grey"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/caa02_et_confirmationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textColorHint="@color/grey"
            android:layout_marginLeft="4dp"
            android:hint="@string/confirmation_code_hint"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:enabled="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/caa02_b_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/confirm_create_account"
        android:textSize="16dp"
        android:textColor="@color/grey"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="@string/already_have_account"
            android:textSize="14dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/caa02_tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="14dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</LinearLayout>