<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorAccent"
    android:padding="16dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo_brown"/>

    <EditText
        android:id="@+id/la_et_email"
        style="@style/EditText_login"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/la_et_password" />

    <EditText
        android:id="@+id/la_et_password"
        style="@style/EditText_login"
        android:imeOptions="actionDone"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/la_b_signIn"
        style="@style/Button_login"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="@string/dont_have_account"
            android:textSize="@dimen/layout_textSize"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/la_tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textSize="14dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</LinearLayout>