<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorAccent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displaying_searched_user"
        android:textStyle="bold"
        android:padding="8dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/place_holder"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/user_email"/>
        <TextView
            android:id="@+id/sfdf_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/user_name"/>
        <TextView
            android:id="@+id/sfdf_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/user_birthday"/>
        <TextView
            android:id="@+id/sfdf_tv_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/user_gender"/>
        <TextView
            android:id="@+id/sfdf_tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sfdf_fab_friended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="6dp"
            android:src="@drawable/check_green" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sfdf_fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="6dp"
            android:src="@drawable/add_brown"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sfdf_fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="6dp"
            android:src="@drawable/x_red" />
    </LinearLayout>

</LinearLayout>